Misc: code style